# tax-assist

./: .gitignore  README.md
.agents/skills/testing-engagement-system/: SKILL.md
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: clients.py  documents.py  pipeline.py  webhooks.py
backend/app/services/: calendly.py  devin_api.py  fireflies.py  gmail.py  google_docs.py  google_drive.py  google_sheets.py  mock_services.py
backend/scripts/: gmail_auth.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  AddClientModal.tsx  ClientDetailModal.tsx  EmailLog.tsx  Header.tsx  PipelineBoard.tsx  WebhookSimulatorModal.tsx
frontend/src/lib/: api.ts  types.ts
